<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/forgot_password_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/forgot_password_reset"
            android:textColor="#43A047"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/dont_worry_etc"
            android:textAlignment="center"
            android:textColor="@color/btnRed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/forgot_password_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/provide_your_registered_email_here"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/reset_password_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email" />

        <TextView
            android:id="@+id/tv_reset_password_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="&lt; &lt; Go back"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/forgot_password_email_icon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/reset_password_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email">

            <ImageView
                android:id="@+id/forgot_password_icon"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_mail_outline_24px"
                android:visibility="gone" />

            <TextView
                android:id="@+id/forgot_password_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/recovery_email_send_successfully"
                android:textColor="@color/brighter_green"
                android:visibility="gone" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/forgot_password_icon_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:theme="@style/RedProgressBar"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/forgot_password_email_icon_container"
            app:layout_constraintStart_toStartOf="@+id/forgot_password_email_icon_container"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email_icon_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>